essai ajout font

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,1 +1,8 @@
-/*# sourceMappingURL=index.css.map */
+@font-face {
+  font-family: "inter-bold";
+  src: url(../);
+}
+@font-face {
+  font-family: "merri";
+  src: url(../fonts/Merriweather-light.ttf);
+}/*# sourceMappingURL=index.css.map */
