--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,8 +1,38 @@
 @font-face {
   font-family: "inter-bold";
-  src: url(../);
+  src: url(../fonts/Inter_28pt-ExtraBold.ttf);
 }
 @font-face {
   font-family: "merri";
   src: url(../fonts/Merriweather-light.ttf);
+}
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+li {
+  list-style: none;
+}
+
+a, a:visited {
+  color: rgb(243, 243, 243);
+}
+
+body {
+  background: url(../img/bg.jpg) fixed center/cover;
+  text-align: center;
+  font-family: merri, serif;
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
+img {
+  width: 50%;
 }/*# sourceMappingURL=index.css.map */
