Header ok et dev du main

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -96,11 +96,16 @@ header {
             max-width: 300px;
             justify-content: space-around;
             margin-right: 10px;
-        }
 
-        li {
-            
+            li {
+                transition: 0.15s;
+                cursor: pointer;
+
+                &:hover {
+                    transform: scale(1.3);
+
+                }
+            }
         }
-    
     }
 }
