--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -204,6 +204,70 @@ header nav .nav-right {
       justify-content: space-around;
   margin-right: 10px;
 }
+header nav .nav-right li {
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
+  cursor: pointer;
+}
+header nav .nav-right li:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+main {
+  width: 85%;
+  margin: 0 auto 30px;
+  background: rgb(243, 243, 243);
+}
+
 img {
-  width: 50%;
+  width: 100%;
+}
+
+.section1 {
+  width: 80%;
+  margin: 0 auto;
+}
+.section1 span {
+  padding: 70px 0;
+  position: relative;
+  display: block;
+}
+.section1 span:before, .section1 span:after {
+  content: "";
+  position: absolute;
+  width: 30%;
+  height: 1px;
+  background: rgb(209, 209, 209);
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+@media screen and (max-width: 700px) {
+  .section1 span:before, .section1 span:after {
+    width: 30%;
+  }
+}
+@media screen and (max-width: 450px) {
+  .section1 span:before, .section1 span:after {
+    width: 25%;
+  }
+}
+.section1 span:before {
+  left: 0;
+}
+.section1 span:after {
+  right: 0;
+}
+.section1 h2 {
+  font-family: inter-bold, sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.section1 p {
+  width: 60%;
+  margin: 30px auto;
+  line-height: 35px;
+  font-style: italic;
+  font-size: 0.8rem;
 }/*# sourceMappingURL=index.css.map */
