--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -1,3 +1,58 @@
+main {
+    width: 85%;
+    margin : 0 auto 30px;
+    background: $white1;
+}
+
 img {
-    width: 50%;
+    width: 100%;
+}
+
+.section1 {
+    width: 80%;
+    margin: 0 auto;
+
+    span {
+        padding: 70px 0;
+        position: relative;
+        display: block;
+
+        &:before, &:after {
+            content:"";
+            position: absolute;
+            width: 30%;
+            height: 1px;
+            background: $grey1;
+            top: 50%;
+            transform: translateY(-50%);
+
+            @media screen and (max-width:700px) {
+                width: 30%;
+            }
+
+            @media screen and (max-width:450px) {
+                width: 25%;
+            }
+        }
+
+        &:before {
+            left:0;
+        }
+
+        &:after {
+            right:0;
+        }
+    }
+
+    h2 {
+        @include title;
+    }
+
+    p {
+        width: 60%;
+        margin: 30px auto;
+        line-height: 35px;
+        font-style: italic;
+        font-size: 0.8rem;
+    }
 }
