--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -270,4 +270,7 @@ img {
   line-height: 35px;
   font-style: italic;
   font-size: 0.8rem;
+}
+.section1 .btn {
+  margin: 50px auto 90px;
 }/*# sourceMappingURL=index.css.map */
