--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -55,4 +55,12 @@ img {
         font-style: italic;
         font-size: 0.8rem;
     }
+
+    .btn {
+        margin: 50px auto 90px;
+    }
+
+    .section2 {
+        //1:00:16
+    }
 }
