--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -219,21 +219,19 @@ main {
   margin: 0 auto 30px;
   background: rgb(243, 243, 243);
 }
-
-img {
+main img {
   width: 100%;
 }
-
-.section1 {
+main .section1 {
   width: 80%;
   margin: 0 auto;
 }
-.section1 span {
+main .section1 span {
   padding: 70px 0;
   position: relative;
   display: block;
 }
-.section1 span:before, .section1 span:after {
+main .section1 span:before, main .section1 span:after {
   content: "";
   position: absolute;
   width: 30%;
@@ -244,33 +242,60 @@ img {
           transform: translateY(-50%);
 }
 @media screen and (max-width: 700px) {
-  .section1 span:before, .section1 span:after {
+  main .section1 span:before, main .section1 span:after {
     width: 30%;
   }
 }
 @media screen and (max-width: 450px) {
-  .section1 span:before, .section1 span:after {
+  main .section1 span:before, main .section1 span:after {
     width: 25%;
   }
 }
-.section1 span:before {
+main .section1 span:before {
   left: 0;
 }
-.section1 span:after {
+main .section1 span:after {
   right: 0;
 }
-.section1 h2 {
+main .section1 h2 {
   font-family: inter-bold, sans-serif;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
-.section1 p {
+main .section1 p {
   width: 60%;
   margin: 30px auto;
   line-height: 35px;
   font-style: italic;
   font-size: 0.8rem;
 }
-.section1 .btn {
+main .section1 .btn {
   margin: 50px auto 90px;
+}
+main .section2 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  border-top: 1px solid rgb(209, 209, 209);
+}
+main .section2 .left-part, main .section2 .right-part {
+  padding: 60px;
+}
+main .section2 .left-part span, main .section2 .right-part span {
+  font-size: 0.75rem;
+}
+main .section2 .left-part h3, main .section2 .right-part h3 {
+  margin: 20px 0;
+  font-family: inter-bold, sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  line-height: 20px;
+}
+main .section2 .left-part h3 p, main .section2 .right-part h3 p {
+  text-align: left;
+  line-height: 30px;
+  margin: 30px 0;
+  font-size: 0.8rem;
+}
+main .section2 .left-part {
+  border-right: 1px solid rgb(209, 209, 209);
 }/*# sourceMappingURL=index.css.map */
