--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -298,4 +298,43 @@ main .section2 .left-part h3 p, main .section2 .right-part h3 p {
 }
 main .section2 .left-part {
   border-right: 1px solid rgb(209, 209, 209);
+}
+
+footer {
+  background: rgb(233, 233, 233);
+  min-height: 640px;
+  width: 85%;
+  margin: 0 auto 70px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+footer form {
+  display: grid;
+  gap: 18px;
+  padding: 60px 50px;
+  grid-template-rows: 18px 45px 18px 45px 18px 200px 1fr;
+}
+footer form label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  font-size: 0.7rem;
+  font-family: inter-bold, sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: rgb(105, 105, 105);
+}
+footer form input[type=text], footer form textarea {
+  background: none;
+  border: 1px solid rgb(209, 209, 209);
+  border-radius: 4px;
+  resize: none;
+}
+footer form .submit-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }/*# sourceMappingURL=index.css.map */
