--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -121,6 +121,11 @@ header .header-content h1 {
   font-size: 3rem;
   letter-spacing: 4px;
 }
+@media screen and (max-width: 700px) {
+  header .header-content h1 {
+    font-size: 2rem;
+  }
+}
 header .header-content p {
   margin: 40px auto 60px;
   font-style: italic;
@@ -187,6 +192,11 @@ header nav .nav-left li {
           align-items: center;
   cursor: pointer;
 }
+@media screen and (max-width: 700px) {
+  header nav .nav-left li {
+    font-size: 0.5rem;
+  }
+}
 header nav .nav-left li:first-child {
   background: rgb(243, 243, 243);
   color: rgb(17, 17, 17);
@@ -203,6 +213,11 @@ header nav .nav-right {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   margin-right: 10px;
+}
+@media screen and (max-width: 700px) {
+  header nav .nav-right {
+    display: none;
+  }
 }
 header nav .nav-right li {
   -webkit-transition: 0.15s;
@@ -261,6 +276,12 @@ main .section1 h2 {
   font-family: inter-bold, sans-serif;
   letter-spacing: 2px;
   text-transform: uppercase;
+  font-size: 3rem;
+}
+@media screen and (max-width: 700px) {
+  main .section1 h2 {
+    font-size: 1.5rem;
+  }
 }
 main .section1 p {
   width: 60%;
@@ -276,6 +297,11 @@ main .section2 {
   display: grid;
   grid-template-columns: 50% 50%;
   border-top: 1px solid rgb(209, 209, 209);
+}
+@media screen and (max-width: 700px) {
+  main .section2 {
+    grid-template-columns: 1fr;
+  }
 }
 main .section2 .left-part, main .section2 .right-part {
   padding: 60px;
@@ -308,6 +334,11 @@ footer {
   display: grid;
   grid-template-columns: 50% 50%;
 }
+@media screen and (max-width: 900px) {
+  footer {
+    grid-template-columns: 1fr;
+  }
+}
 footer form {
   display: grid;
   gap: 18px;
@@ -337,4 +368,72 @@ footer form .submit-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+footer form .submit-container .btn {
+  color: rgb(105, 105, 105);
+  border: 2px solid rgb(105, 105, 105);
+}
+footer .infos-contact {
+  border-left: 1px solid rgb(209, 209, 209);
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+}
+@media screen and (max-width: 900px) {
+  footer .infos-contact div:nth-child(1) {
+    border-top: 1px solid rgb(209, 209, 209);
+    padding-bottom: 20px;
+  }
+}
+footer .infos-contact div {
+  border-bottom: 1px solid rgb(209, 209, 209);
+  display: grid;
+  grid-template-columns: 30% 70%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media screen and (max-width: 900px) {
+  footer .infos-contact div {
+    grid-template-columns: 45% 55%;
+  }
+}
+footer .infos-contact div h3 {
+  font-family: inter-bold, sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  padding-left: 40px;
+  text-align: left;
+  color: rgb(105, 105, 105);
+}
+footer .infos-contact div p {
+  font-size: 0.8rem;
+  line-height: 26px;
+  text-align: left;
+  color: grey;
+}
+footer .infos-contact .social ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+footer .infos-contact .social ul li {
+  border: 1px solid rgb(209, 209, 209);
+  border-radius: 150px;
+  height: 40px;
+  width: 40%;
+  font-size: 0.9rem;
+  margin-right: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }/*# sourceMappingURL=index.css.map */
