--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -6,6 +6,10 @@ footer {
     display: grid;
     grid-template-columns: 50% 50%;
 
+    @media screen and (max-width:900px) {
+        grid-template-columns: 1fr;
+    }
+
     form {
         display: grid;
         gap: 18px;
@@ -29,7 +33,69 @@ footer {
 
         .submit-container {
             display: flex;
+            align-items: flex-end;
             
+            .btn {
+                color:$grey3;
+                border: 2px solid $grey3;
+            }
+        }
+    }
+
+    .infos-contact {
+        border-left: 1px solid $grey1;
+        display: grid;
+        grid-template-rows: repeat(4, 1fr);
+
+        div:nth-child(1) {
+            @media screen and (max-width:900px) {
+                border-top: 1px solid $grey1;
+                padding-bottom: 20px;
+            }
+        }
+
+        div {
+            border-bottom: 1px solid $grey1;
+            display: grid;
+            grid-template-columns: 30% 70%;
+            align-items: center;
+
+            @media screen and (max-width:900px) {
+                grid-template-columns: 45% 55%;
+            }
+
+            h3 {
+                @include title;
+                font-size: 0.7rem;
+                padding-left: 40px;
+                text-align: left;
+                color: $grey3;
+            }
+
+            p {
+                font-size: 0.8rem;
+                line-height: 26px;
+                text-align: left;
+                color:grey;
+            }
+        }
+
+        .social {
+            ul {
+                display: flex;
+
+                li {
+                    border: 1px solid $grey1;
+                    border-radius: 150px;
+                    height: 40px;
+                    width: 40%;
+                    font-size: 0.9rem;
+                    margin-right: 12px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
         }
     }
 
